--- a/_pages/twitterlist.html
+++ b/_pages/twitterlist.html
@@ -4,8 +4,6 @@ title: "TwitterList"
 permalink: /twitterlist/
 author_profile: false
 ---
-
-{% plugin_type twitter_url *options %}
-
-# Example for timeline of the **jekyllrb** user with a maximum of 5 Tweets and with a width of 500px
-{% twitter https://twitter.com/jekyllrb maxwidth=500 limit=5 %}
+<div class='jekyll-twitter-plugin' align="center">
+    {% twitter https://twitter.com/anaik96 maxwidth=500 limit=5 %}
+</div>
